Add lost images back

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <Div class="col-12">
                     <div class="header__iner-menu">
                         <a href="#" alt="logo">
-                            <img src="assets/images/logo.png">
+                            <img src="assets">
                         </a>
                         <ul class="header__nav">
                             <li><a href="#welcome" class="active">Home</a></li>
